Make imagelib not blow away images in the image cache on 404.  Bug 349200, r=pavlov, sr=darin